# FTorch_coupling_examples

./: README.md
CNN-simple/: CMakeLists.txt  README.md  cnn-simple.py  cnn-simple_infer_fortran.f90  cnn-simple_infer_python.py
FNO-1D/: README.md  fno1d.py
